# kube-python-micro-services-example

./: Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  test_monolithic_local.http  test_ms_services.http
K8S/: reset.sh
K8S/monolithic/: deployment.yml  svc-deploy.yml
K8S/mservices/: cmap.yml  deployment_master.yml  deployment_mul.yml  deployment_sum.yml  svc_master.yml  svc_mul.yml  svc_sum.yml
app/: config.py  errors.py  messages.py  micro_service_master.py  micro_service_mul.py  micro_service_sum.py  micro_sevice_sum.py  server.py  server_monolithic.py  server_proxy.py  server_sum.py
app/cli/: run.py  run_mul_cli.py  run_service.py  run_sum_cli.py
app/lib/arithmetic/: __init__.py  mul.py  sum.py
diagram/: microservices_diag.py  multi_services_diag.py  service_diag.py
tests/: test_version.py
