[tool.poetry]
name = "kube-python-micro-services-example"
packages = [
    { include = "app" }
]
version = "0.1.0"
description = "Project aims to be an didactic example on how to deploy python micro-services in kubernetes"
authors = ["Senhaji-Rhazi-Hamza <hamza.senhajirhazi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.3"
click = "^8.0.4"
diagrams = "^0.21.1"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]
ipdb = "^0.13.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
